--- a/app/less/components/_header.less
+++ b/app/less/components/_header.less
@@ -64,6 +64,22 @@
   }
 }
 
+.unimproved .header {
+  &__content {
+    h1 {
+      font-weight: 300;
+    }
+
+    p {
+      font-weight: 300;
+    }
+
+    .help-message {
+      font-weight: 300;
+    }
+  }
+}
+
 @media only screen and (min-width: 100px) and (max-width: 1023px) {
   .header {
     height: auto;
