--- a/app/css/components/_app-menu.css
+++ b/app/css/components/_app-menu.css
@@ -153,3 +153,13 @@
 .app-menu-block_show .app-menu {
   left: -200px;
 }
+.unimproved .app-menu-block {
+  position: fixed;
+  z-index: 990;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  background-color: rgba(0, 0, 0, 0.8);
+}
