--- a/app/css/components/_control-menu.css
+++ b/app/css/components/_control-menu.css
@@ -48,6 +48,9 @@
 .nav-tabs_mobile {
   display: none;
 }
+.unimproved .info-tabs__nav .tab-trigger {
+  font-weight: 400;
+}
 @media only screen and (min-width: 100px) and (max-width: 1023px) {
   .control-menu {
     width: 100%;
@@ -61,7 +64,7 @@
     width: 100%;
   }
   .control-menu .exchange-control .checkbox-block {
-    width: 140px;
+    width: 128px;
     position: relative;
     right: auto;
     margin: 0 auto;
@@ -87,5 +90,13 @@
   }
   .nav-tabs_mobile {
     display: block;
+  }
+}
+@media only screen and (min-width: 100px) and (max-width: 360px) {
+  .control-menu {
+    padding: 30px 0 7px;
+  }
+  .control-menu .exchange-control .checkbox-block {
+    width: 100px;
   }
 }
