--- a/app/css/components/_footer.css
+++ b/app/css/components/_footer.css
@@ -4,6 +4,7 @@ footer {
   position: relative;
   background: #111118;
   padding: 70px 0 50px 0;
+  z-index: 1;
 }
 footer .logo {
   width: 200px;
