--- a/app/css/components/_main-menu.css
+++ b/app/css/components/_main-menu.css
@@ -8,11 +8,11 @@
   position: relative;
   float: left;
   width: 120px;
-  height: 82px;
+  height: 120px;
   margin: 0 32px 0 0;
   top: 0;
   left: 0;
-  background: url("../img/Logo_For_Home_Page2.svg");
+  background: url("../img/Logo_For_Home_Page2.svg") no-repeat;
   -webkit-background-size: 100% 100%;
           background-size: 100%;
 }
