--- a/app/css/modules/_ui.css
+++ b/app/css/modules/_ui.css
@@ -66,7 +66,7 @@
   transition: 1s;
 }
 .checkbox .state-1 {
-  left: -140px;
+  left: -148px;
 }
 .checkbox .state-2 {
   left: 100px;
@@ -103,13 +103,66 @@
 .state-2:hover {
   color: #fbcd20 !important;
 }
+.close-btn {
+  width: 50px;
+  padding-top: 40px;
+  position: relative;
+  cursor: pointer;
+}
+.close-btn div {
+  width: 30px;
+  top: 20px;
+  left: 10px;
+  height: 2px;
+  position: absolute;
+  background: #fff;
+  -webkit-border-radius: 2px;
+          border-radius: 2px;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+}
+.close-btn .x {
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.close-btn .y {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+.close-btn span {
+  font-size: 13px;
+  display: block;
+  text-align: center;
+  -webkit-transition: all .9s;
+  -o-transition: all .9s;
+  transition: all .9s;
+}
+.close-btn:hover div {
+  background: #fbcd20;
+}
+.close-btn:hover .x {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+.close-btn:hover .y {
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.close-btn:hover span {
+  color: #fbcd20;
+}
 @media only screen and (min-width: 100px) and (max-width: 1023px) {
   .checkbox {
     margin: 0 20px;
     background-color: #FBCD20;
     -webkit-border-radius: 50px;
             border-radius: 50px;
-    width: 82px;
+    width: 71px;
     height: 37px;
     display: inline-block;
     position: relative;
@@ -137,9 +190,34 @@
     cursor: pointer;
   }
   .checkbox .state-1 {
-    left: -110px;
+    left: -112px;
   }
   .checkbox .state-2 {
-    left: 100px;
+    left: 80px;
+  }
+  .checkbox.checked:after {
+    left: 30px;
+  }
+}
+@media only screen and (min-width: 100px) and (max-width: 360px) {
+  .checkbox {
+    -webkit-border-radius: 50px;
+            border-radius: 50px;
+    width: 60px;
+  }
+  .checkbox input {
+    display: none;
+  }
+  .checkbox label {
+    font-size: 15px;
+  }
+  .checkbox .state-1 {
+    left: -108px;
+  }
+  .checkbox .state-2 {
+    left: 70px;
+  }
+  .checkbox.checked:after {
+    left: 20px;
   }
 }
