--- a/app/less/components/_app-menu.less
+++ b/app/less/components/_app-menu.less
@@ -147,3 +147,18 @@
     left: -200px;
   }
 }
+
+.unimproved {
+
+}
+
+.unimproved .app-menu-block {
+  position: fixed;
+  z-index: 990;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  background-color: rgba(0, 0, 0, .8);
+}
