--- a/app/less/components/_control-menu.less
+++ b/app/less/components/_control-menu.less
@@ -50,6 +50,14 @@
   display: none;
 }
 
+
+.unimproved .info-tabs__nav {
+    .tab-trigger{
+      font-weight: 400;
+  }
+}
+
+
 @media only screen and (min-width: 100px) and (max-width: 1023px) {
   .control-menu {
     width: 100%;
@@ -64,7 +72,7 @@
       width: 100%;
 
       .checkbox-block {
-        width: 140px;
+        width: 128px;
         position: relative;
         right: auto;
         margin: 0 auto;
@@ -98,3 +106,13 @@
   }
 }
 
+@media only screen and (min-width: 100px) and (max-width: 360px) {
+  .control-menu {
+    padding: 30px 0 7px;
+    .exchange-control {
+      .checkbox-block {
+        width: 100px;
+      }
+    }
+  }
+}
