--- a/app/less/components/_exchange.less
+++ b/app/less/components/_exchange.less
@@ -15,7 +15,7 @@
     opacity: 0;
     z-index: 9;
     transform:scale(1.1);
-    transition: opacity 1s, transform 2s;
+    transition: all .9s cubic-bezier(.6,0,.4,1), opacity 1s;
   }
 
   &__item {
@@ -34,10 +34,13 @@
         font-weight: 500;
         line-height: 22px;
         display: inline-block;
+        text-align: start;
 
         i {
-          font-size: 13px;
+          font-size: 15px;
+          text-transform: lowercase;
           font-weight: 400;
+          padding-left: 1px;
           color: #b8b8b8;
           font-style: normal;
           display: block;
@@ -49,14 +52,17 @@
       }
 
       .ico_arrow {
-        width: 20px;
-        height: 20px;
-        background: url("../img/ico/arrows-ico.svg");
-        opacity: 0.3;
-        margin: 0 20px;
+        width: 22px;
+        height: 22px;
+        padding: 2px;
+        background: bottom center url("../img/ico/arrows-ico.svg") no-repeat;
+        background-size: 98%;
+        opacity: 0.4;
+        margin: 0 18px;
         position: relative;
-        top: -20px;
+        top: -16px;
         display: inline-block;
+        transform:scale(1);
       }
     }
 
@@ -76,6 +82,25 @@
     opacity: 1;
     z-index: 10;
     transform:scale(1);
+  }
+}
+
+.unimproved .exchange {
+  &__item {
+
+    .quantity {
+      span {
+        font-weight: 300;
+
+        i {
+          font-weight: 300;
+        }
+      }
+
+      .ico_arrow {
+
+      }
+    }
   }
 }
 
@@ -110,6 +135,38 @@
         padding: 12px 12px;
       }
     }
+  }
+}
 
+@media only screen and (min-width: 100px) and (max-width: 360px) {
+  .exchange {
+    &__state {
+      position: absolute;
+      width: 100%;
+      min-width: 100px;
+    }
+
+    &__item {
+      width: 90%;
+      padding: 37px 5%;
+
+      .quantity {
+        .ico_arrow {
+          margin: 0 5px;
+          top: -14px;
+        }
+
+        span {
+          font-size: 26px;
+        }
+      }
+
+      .btn {
+        right: 5%;
+        top: 37px;
+        font-size: 14px;
+        padding: 12px 10px;
+      }
+    }
   }
 }
