--- a/app/less/components/_information-tabs.less
+++ b/app/less/components/_information-tabs.less
@@ -1,6 +1,6 @@
 .info-tabs {
   width: 55%;
-  height: 740px;
+  height: 100%;
   background: #f8f9fc;
   float: left;
   position: relative;
@@ -8,7 +8,7 @@
   &__tab {
     z-index: 2;
     width: 90%;
-    padding-top: 95px;
+    padding-top: 60px;
     position: relative;
 
     .partner-logo {
@@ -20,13 +20,32 @@
       font-size: 31px;
       line-height: 1.252;
       font-weight: 400;
-      padding: 0 0 15px 0;
+      padding: 10px 0 50px 0;
+      margin: 0;
     }
 
     p {
       font-size: 16px;
       color: #4a4a4a;
       line-height: 1.688;
+    }
+  }
+
+  .contacts {
+    padding-top: 40px;
+    p {
+      font-size: 21px;
+      color: #000;
+      font-weight: 500;
+      margin: 0;
+      padding: 0 0 30px 0;
+
+      span {
+        display: block;
+        font-size: 14px;
+        margin: 0;
+        color: #b8b8b8;
+      }
     }
   }
 }
@@ -37,22 +56,23 @@
       list-style: none;
       font-size: 16px;
       color: #4a4a4a;
-      padding: 0 0 30px 50px;
+      padding: 0 0 50px 60px;
       line-height: 1.625;
       width: 90%;
+      display: block;
       position: relative;
 
       span {
-        width: 30px;
-        height: 30px;
-        background: #fff;
+        width: 40px;
+        height: 40px;
+        background: #fbcd20;
         color: #000;
-        display: block;
-        margin-left: -50px;
+        font-size: 21px;
+        margin-left: -60px;
         position: absolute;
         text-align: center;
+        line-height: 38px;
         border-radius: 50px;
-        vertical-align: middle;
       }
 
     }
@@ -70,6 +90,41 @@
   z-index: 1;
 }
 
+.unimproved .info-tabs {
+  &__tab {
+    h2 {
+      font-weight: 300;
+    }
+
+    p {
+      font-weight: 300;
+      font-size: 20px;
+    }
+  }
+
+  .contacts {
+    p {
+      font-weight: 300;
+
+      span {
+      }
+    }
+  }
+}
+
+.unimproved .tab_help {
+  ul {
+    li {
+      font-weight: 200;
+      font-size: 20px;
+      span {
+
+      }
+
+    }
+  }
+}
+
 @media only screen and (min-width: 1023px) and (max-width: 1220px) {
   .info-tabs {
     width: 50%;
@@ -82,8 +137,8 @@
 
 @media only screen and (min-width: 100px) and (max-width: 1023px) {
   .info-tabs {
-    width: 110%;
-    left: -5%;
+    width: 111%;
+    left: -5.5%;
     height: auto;
     float: none;
 
@@ -114,8 +169,9 @@
   .tab_help {
     ul {
       li {
-        width: 80%;
+        width: 90%;
         margin: 0 auto;
+        padding: 0 0 30px 0;
 
         span {
           display: block;
