--- a/app/less/components/_main-menu.less
+++ b/app/less/components/_main-menu.less
@@ -8,11 +8,11 @@
     position: relative;
     float: left;
     width: 120px;
-    height: 82px;
+    height: 120px;
     margin: 0 32px 0 0;
     top: 0;
     left: 0;
-    background: url("../img/Logo_For_Home_Page2.svg");
+    background: url("../img/Logo_For_Home_Page2.svg") no-repeat;
     background-size: 100%;
   }
 
@@ -186,3 +186,4 @@
     border-bottom: none;
   }
 }
+
