--- a/app/less/components/_text-carousel.less
+++ b/app/less/components/_text-carousel.less
@@ -41,13 +41,27 @@
   }
 }
 
+.unimproved .text-carousel {
+  &__article {
+    strong {
+      font-weight: 300;
+    }
+
+    p {
+      font-weight: 300;
+    }
+  }
+}
+
 @media only screen and (min-width: 100px) and (max-width: 1023px) {
   .text-carousel {
     padding: 30px 0 40px 0;
+    text-align: center;
     border-top: 1px solid rgba(255, 255, 255, 0.4);
 
     &__article {
-      margin: 0;
+      width: 90%;
+      margin: 0 auto;
 
       strong {
         font-size: 17px;
