--- a/app/less/modules/_grid.less
+++ b/app/less/modules/_grid.less
@@ -6,14 +6,10 @@
   padding: 0 15px;
 }
 
-/*.inner-wrapper {
-  width: 100%;
-  max-width: 505px;
-}*/
-
 .page-container {
   background: #fff;
   width: 100%;
+  min-height: 100%;
   position: relative;
   height: auto;
 }
