--- a/app/less/modules/_ui.less
+++ b/app/less/modules/_ui.less
@@ -56,7 +56,7 @@
   }
 
   .state-1 {
-    left: -140px;
+    left: -148px;
   }
 
   .state-2 {
@@ -98,12 +98,62 @@
   color: #fbcd20 !important;
 }
 
+.close-btn {
+  width: 50px;
+  padding-top: 40px;
+  position: relative;
+  cursor: pointer;
+
+  div {
+    width: 30px;
+    top: 20px;
+    left: 10px;
+    height: 2px;
+    position: absolute;
+    background: #fff;
+    border-radius: 2px;
+    transition: all .5s;
+  }
+
+  .x {
+    transform: rotate(45deg);
+  }
+
+  .y {
+    transform: rotate(-45deg);
+  }
+
+  span {
+    font-size: 13px;
+    display: block;
+    text-align: center;
+    transition: all .9s;
+  }
+
+  &:hover {
+    div {
+      background: #fbcd20;
+    }
+    .x {
+      transform: rotate(-45deg);
+    }
+
+    .y {
+      transform: rotate(45deg);
+    }
+
+    span {
+      color: #fbcd20;
+    }
+  }
+}
+
 @media only screen and (min-width: 100px) and (max-width: 1023px) {
   .checkbox {
     margin: 0 20px;
     background-color: #FBCD20;
     border-radius: 50px;
-    width: 82px;
+    width: 71px;
     height: 37px;
     display: inline-block;
     position: relative;
@@ -127,11 +177,41 @@
     }
 
     .state-1 {
-      left: -110px;
+      left: -112px;
     }
 
     .state-2 {
-      left: 100px;
+      left: 80px;
     }
+  }
+  .checkbox.checked:after {
+    left: 30px;
+  }
+}
+
+@media only screen and (min-width: 100px) and (max-width: 360px) {
+  .checkbox {
+    border-radius: 50px;
+    width: 60px;
+
+    input {
+      display: none;
+    }
+
+    label {
+      font-size: 15px;
+    }
+
+    .state-1 {
+      left: -108px;
+    }
+
+    .state-2 {
+      left: 70px;
+    }
+  }
+
+  .checkbox.checked:after {
+    left: 20px;
   }
 }
